# Mandelbrot-Set-Virtualization

./: .gitignore  CMakeLists.txt  Makefile  README.md
master/: CMakeLists.txt  Makefile  master.c
slave/: CMakeLists.txt  Makefile  slave.c
